; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_schema_memcache.c_tl_type_get_by_id.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_schema_memcache.c_tl_type_get_by_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.tl_type = type { i8* }
%struct.hash_elem_tl_type_id = type { %struct.tl_type* }

@cur_config = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.tl_type* @tl_type_get_by_id(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.tl_type, align 8
  %4 = alloca %struct.hash_elem_tl_type_id*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** @cur_config, align 8
  %6 = call i32 @assert(%struct.TYPE_3__* %5)
  %7 = load i8*, i8** %2, align 8
  %8 = getelementptr inbounds %struct.tl_type, %struct.tl_type* %3, i32 0, i32 0
  store i8* %7, i8** %8, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** @cur_config, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call %struct.hash_elem_tl_type_id* @hash_lookup_tl_type_id(i32 %11, %struct.tl_type* %3)
  store %struct.hash_elem_tl_type_id* %12, %struct.hash_elem_tl_type_id** %4, align 8
  %13 = load %struct.hash_elem_tl_type_id*, %struct.hash_elem_tl_type_id** %4, align 8
  %14 = icmp ne %struct.hash_elem_tl_type_id* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = load %struct.hash_elem_tl_type_id*, %struct.hash_elem_tl_type_id** %4, align 8
  %17 = getelementptr inbounds %struct.hash_elem_tl_type_id, %struct.hash_elem_tl_type_id* %16, i32 0, i32 0
  %18 = load %struct.tl_type*, %struct.tl_type** %17, align 8
  br label %20

19:                                               ; preds = %1
  br label %20

20:                                               ; preds = %19, %15
  %21 = phi %struct.tl_type* [ %18, %15 ], [ null, %19 ]
  ret %struct.tl_type* %21
}

declare dso_local i32 @assert(%struct.TYPE_3__*) #1

declare dso_local %struct.hash_elem_tl_type_id* @hash_lookup_tl_type_id(i32, %struct.tl_type*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
